--- a/_posts/05-06-2014-the-bees.md
+++ b/_posts/05-06-2014-the-bees.md
@@ -10,9 +10,8 @@ description: |
   pollen. She also finds her way into the Queen’s inner sanctum, where she discovers 
   mysteries about the hive that are both profound and ominous. Excerpt from amazon.com
 author: Paull, Laline
-date:
-  day: 06
-  month: 05
-  year: 2014
+pubday: 06
+pubmonth: 05
+pubyear: 2014
 ---
 # The Bees by Laline Paull
